--- a/arduino-core/src/processing/app/i18n/Resources_bg.properties
+++ b/arduino-core/src/processing/app/i18n/Resources_bg.properties
@@ -13,7 +13,7 @@
 # Anton Stoychev <antitoxic@gmail.com>, 2013
 # Ivaylo Malinov <mals@mail.bg>, 2015
 # Valentin Laskov <laskov@festa.bg>, 2012-2015
-!=Project-Id-Version\: Arduino IDE 1.5\nReport-Msgid-Bugs-To\: \nPOT-Creation-Date\: 2012-03-29 10\:24-0400\nPO-Revision-Date\: 2015-11-25 07\:45+0000\nLast-Translator\: Ivaylo Malinov <mals@mail.bg>\nLanguage-Team\: Bulgarian (http\://www.transifex.com/mbanzi/arduino-ide-15/language/bg/)\nMIME-Version\: 1.0\nContent-Type\: text/plain; charset\=UTF-8\nContent-Transfer-Encoding\: 8bit\nLanguage\: bg\nPlural-Forms\: nplurals\=2; plural\=(n \!\= 1);\n
+!=Project-Id-Version\: Arduino IDE 1.5\nReport-Msgid-Bugs-To\: \nPOT-Creation-Date\: 2012-03-29 10\:24-0400\nPO-Revision-Date\: 2015-11-26 11\:18+0000\nLast-Translator\: Ivaylo Malinov <mals@mail.bg>\nLanguage-Team\: Bulgarian (http\://www.transifex.com/mbanzi/arduino-ide-15/language/bg/)\nMIME-Version\: 1.0\nContent-Type\: text/plain; charset\=UTF-8\nContent-Transfer-Encoding\: 8bit\nLanguage\: bg\nPlural-Forms\: nplurals\=2; plural\=(n \!\= 1);\n
 
 #: Preferences.java:358 Preferences.java:374
 \ \ (requires\ restart\ of\ Arduino)=\  (\u0438\u0437\u0438\u0441\u043a\u0432\u0430 \u0440\u0435\u0441\u0442\u0430\u0440\u0442\u0438\u0440\u0430\u043d\u0435 \u043d\u0430 \u0410\u0440\u0434\u0443\u0438\u043d\u043e)
@@ -1272,7 +1272,7 @@ Select\ new\ sketchbook\ location=\u0418\u0437\u0431\u0435\u0440\u0435\u0442\u04
 
 #: ../../../../../app/src/cc/arduino/contributions/libraries/ui/ContributedLibraryTableCell.java:237
 #: ../../../../../app/src/cc/arduino/contributions/packages/ui/ContributedPlatformTableCell.java:249
-!Select\ version=
+Select\ version=\u0418\u0437\u0431\u043e\u0440 \u0432\u0435\u0440\u0441\u0438\u044f
 
 #: ../../../processing/app/debug/Compiler.java:146
 Selected\ board\ depends\ on\ '{0}'\ core\ (not\ installed).=\u0418\u0437\u0431\u0440\u0430\u043d\u0430\u0442\u0430 \u043f\u043b\u0430\u0442\u043a\u0430 \u0438\u0437\u0438\u0441\u043a\u0432\u0430 '{0}' \u044f\u0434\u0440\u043e (\u043d\u0435 \u0435 \u0438\u043d\u0441\u0442\u0430\u043b\u0438\u0440\u0430\u043d\u043e).
@@ -1526,7 +1526,7 @@ Unable\ to\ open\ serial\ monitor=\u041d\u0435\u0432\u044a\u0437\u043c\u043e\u04
 !Unable\ to\ reach\ Arduino.cc\ due\ to\ possible\ network\ issues.=
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:38
-!Uncategorized=
+Uncategorized=\u041d\u0435\u043a\u0430\u0442\u0435\u0433\u043e\u0440\u0438\u0437\u0438\u0440\u0430\u043d\u043e
 
 #: Editor.java:1133 Editor.java:1355
 Undo=\u041e\u0442\u043c\u044f\u043d\u0430
@@ -1544,7 +1544,7 @@ Unspecified\ platform,\ no\ launcher\ available.\nTo\ enable\ opening\ URLs\ or\
 
 #: ../../../../../app/src/cc/arduino/contributions/libraries/ui/DropdownUpdatableLibrariesItem.java:27
 #: ../../../../../app/src/cc/arduino/contributions/packages/ui/DropdownUpdatableCoresItem.java:27
-!Updatable=
+Updatable=\u041e\u0431\u043d\u043e\u0432\u044f\u0435\u043c
 
 #: UpdateCheck.java:111
 Update=\u041e\u0431\u043d\u043e\u0432\u043b\u0435\u043d\u0438\u0435
@@ -1553,7 +1553,7 @@ Update=\u041e\u0431\u043d\u043e\u0432\u043b\u0435\u043d\u0438\u0435
 Update\ sketch\ files\ to\ new\ extension\ on\ save\ (.pde\ ->\ .ino)=\u041f\u0440\u0438 \u0437\u0430\u043f\u0438\u0441 \u043e\u0431\u043d\u043e\u0432\u044f\u0432\u0430\u0439 \u0444\u0430\u0439\u043b\u043e\u0432\u0435\u0442\u0435-\u0441\u043a\u0438\u0446\u0438 \u043a\u044a\u043c \u043d\u043e\u0432\u043e\u0442\u043e \u0440\u0430\u0437\u0448\u0438\u0440\u0435\u043d\u0438\u0435 (.pde -> .ino)
 
 #: ../../../cc/arduino/contributions/libraries/LibraryInstaller.java:167
-!Updating\ list\ of\ installed\ libraries=
+Updating\ list\ of\ installed\ libraries=\u0421\u043f\u0438\u0441\u044a\u043a \u0441 \u043e\u0431\u043d\u043e\u0432\u044f\u0432\u0430\u043d\u0435 \u043d\u0430 \u0438\u043d\u0441\u0442\u0430\u043b\u0438\u0440\u0430\u043d\u0438 \u0431\u0438\u0431\u043b\u0438\u0442\u0435\u043a\u0438
 
 #: EditorToolbar.java:41 Editor.java:545
 Upload=\u041a\u0430\u0447\u0432\u0430\u043d\u0435
