--- a/arduino-core/src/processing/app/i18n/Resources_hu.properties
+++ b/arduino-core/src/processing/app/i18n/Resources_hu.properties
@@ -13,7 +13,7 @@
 # benewfy <benewfy@gmail.com>, 2015
 # Melinda <ghostgirl1983@gmail.com>, 2014
 # Cseh Robert <tavir@tavir.hu>, 2012
-!=Project-Id-Version\: Arduino IDE 1.5\nReport-Msgid-Bugs-To\: \nPOT-Creation-Date\: 2012-03-29 10\:24-0400\nPO-Revision-Date\: 2015-11-18 16\:15+0000\nLast-Translator\: Federico Fissore <f.fissore@arduino.cc>\nLanguage-Team\: Hungarian (http\://www.transifex.com/mbanzi/arduino-ide-15/language/hu/)\nMIME-Version\: 1.0\nContent-Type\: text/plain; charset\=UTF-8\nContent-Transfer-Encoding\: 8bit\nLanguage\: hu\nPlural-Forms\: nplurals\=2; plural\=(n \!\= 1);\n
+!=Project-Id-Version\: Arduino IDE 1.5\nReport-Msgid-Bugs-To\: \nPOT-Creation-Date\: 2012-03-29 10\:24-0400\nPO-Revision-Date\: 2015-11-29 01\:00+0000\nLast-Translator\: benewfy <benewfy@gmail.com>\nLanguage-Team\: Hungarian (http\://www.transifex.com/mbanzi/arduino-ide-15/language/hu/)\nMIME-Version\: 1.0\nContent-Type\: text/plain; charset\=UTF-8\nContent-Transfer-Encoding\: 8bit\nLanguage\: hu\nPlural-Forms\: nplurals\=2; plural\=(n \!\= 1);\n
 
 #: Preferences.java:358 Preferences.java:374
 \ \ (requires\ restart\ of\ Arduino)=(Arduino \u00fajraind\u00edt\u00e1sa sz\u00fcks\u00e9ges)
@@ -707,19 +707,19 @@ Filipino=Filipp\u00edn\u00f3
 !Filter\ your\ search...=
 
 #: FindReplace.java:124 FindReplace.java:127
-!Find=
+Find=Keres\u00e9s
 
 #: Editor.java:1249
-!Find\ Next=
+Find\ Next=K\u00f6vetkez\u0151 keres\u00e9se
 
 #: Editor.java:1259
-!Find\ Previous=
+Find\ Previous=El\u0151z\u0151 keres\u00e9se
 
 #: Editor.java:1086 Editor.java:2775
 !Find\ in\ Reference=
 
 #: Editor.java:1234
-!Find...=
+Find...=Keres\u00e9s...
 
 #: FindReplace.java:80
 !Find\:=
@@ -1177,7 +1177,7 @@ Quit=Kil\u00e9p\u00e9s
 !RETIRED=
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:26
-!Recommended=
+Recommended=Aj\u00e1nlott
 
 #: Editor.java:1138 Editor.java:1140 Editor.java:1390
 !Redo=
@@ -1326,7 +1326,7 @@ Show\ Sketch\ Folder=V\u00e1zlat Mappa Mutat\u00e1sa
 Show\ verbose\ output\ during\:\ =Log mutat\u00e1sa\:
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:31
-!Signal\ Input/Output=
+Signal\ Input/Output=Jel bemenet/kimenet
 
 #: Editor.java:607
 Sketch=V\u00e1zlat
