--- a/arduino-core/src/processing/app/i18n/Resources_hu.po
+++ b/arduino-core/src/processing/app/i18n/Resources_hu.po
@@ -18,8 +18,8 @@ msgstr ""
 "Project-Id-Version: Arduino IDE 1.5\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-03-29 10:24-0400\n"
-"PO-Revision-Date: 2015-11-18 16:15+0000\n"
-"Last-Translator: Federico Fissore <f.fissore@arduino.cc>\n"
+"PO-Revision-Date: 2015-11-29 01:00+0000\n"
+"Last-Translator: benewfy <benewfy@gmail.com>\n"
 "Language-Team: Hungarian (http://www.transifex.com/mbanzi/arduino-ide-15/language/hu/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -980,15 +980,15 @@ msgstr ""
 
 #: FindReplace.java:124 FindReplace.java:127
 msgid "Find"
-msgstr ""
+msgstr "Keresés"
 
 #: Editor.java:1249
 msgid "Find Next"
-msgstr ""
+msgstr "Következő keresése"
 
 #: Editor.java:1259
 msgid "Find Previous"
-msgstr ""
+msgstr "Előző keresése"
 
 #: Editor.java:1086 Editor.java:2775
 msgid "Find in Reference"
@@ -996,7 +996,7 @@ msgstr ""
 
 #: Editor.java:1234
 msgid "Find..."
-msgstr ""
+msgstr "Keresés..."
 
 #: FindReplace.java:80
 msgid "Find:"
@@ -1615,7 +1615,7 @@ msgstr ""
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:26
 msgid "Recommended"
-msgstr ""
+msgstr "Ajánlott"
 
 #: Editor.java:1138 Editor.java:1140 Editor.java:1390
 msgid "Redo"
@@ -1814,7 +1814,7 @@ msgstr "Log mutatása:"
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:31
 msgid "Signal Input/Output"
-msgstr ""
+msgstr "Jel bemenet/kimenet"
 
 #: Editor.java:607
 msgid "Sketch"
