--- a/arduino-core/src/processing/app/i18n/Resources_hu.properties
+++ b/arduino-core/src/processing/app/i18n/Resources_hu.properties
@@ -13,7 +13,7 @@
 # benewfy <benewfy@gmail.com>, 2015
 # Melinda <ghostgirl1983@gmail.com>, 2014
 # Cseh Robert <tavir@tavir.hu>, 2012
-!=Project-Id-Version\: Arduino IDE 1.5\nReport-Msgid-Bugs-To\: \nPOT-Creation-Date\: 2012-03-29 10\:24-0400\nPO-Revision-Date\: 2015-11-29 01\:00+0000\nLast-Translator\: benewfy <benewfy@gmail.com>\nLanguage-Team\: Hungarian (http\://www.transifex.com/mbanzi/arduino-ide-15/language/hu/)\nMIME-Version\: 1.0\nContent-Type\: text/plain; charset\=UTF-8\nContent-Transfer-Encoding\: 8bit\nLanguage\: hu\nPlural-Forms\: nplurals\=2; plural\=(n \!\= 1);\n
+!=Project-Id-Version\: Arduino IDE 1.5\nReport-Msgid-Bugs-To\: \nPOT-Creation-Date\: 2012-03-29 10\:24-0400\nPO-Revision-Date\: 2015-12-01 00\:12+0000\nLast-Translator\: benewfy <benewfy@gmail.com>\nLanguage-Team\: Hungarian (http\://www.transifex.com/mbanzi/arduino-ide-15/language/hu/)\nMIME-Version\: 1.0\nContent-Type\: text/plain; charset\=UTF-8\nContent-Transfer-Encoding\: 8bit\nLanguage\: hu\nPlural-Forms\: nplurals\=2; plural\=(n \!\= 1);\n
 
 #: Preferences.java:358 Preferences.java:374
 \ \ (requires\ restart\ of\ Arduino)=(Arduino \u00fajraind\u00edt\u00e1sa sz\u00fcks\u00e9ges)
@@ -33,7 +33,7 @@
 !'Mouse'\ not\ found.\ Does\ your\ sketch\ include\ the\ line\ '\#include\ <Mouse.h>'?=
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:61
-!'arch'\ folder\ is\ no\ longer\ supported\!\ See\ http\://goo.gl/gfFJzU\ for\ more\ information=
+'arch'\ folder\ is\ no\ longer\ supported\!\ See\ http\://goo.gl/gfFJzU\ for\ more\ information=Az 'arch' mappa a tov\u00e1bbiakban nem t\u00e1mogatott\! Tov\u00e1bbi inform\u00e1ci\u00f3k\u00e9rt l\u00e1togassa meg a http\://goo.gl/gfFJzU -t
 
 #: Preferences.java:478
 (edit\ only\ when\ Arduino\ is\ not\ running)=(csak akkor szerkeszthet\u0151, ha az Arduino nem fut)
@@ -120,15 +120,15 @@ All=\u00d6sszes
 !An\ error\ occurred\ while\ updating\ libraries\ index\!=
 
 #: ../../../processing/app/BaseNoGui.java:528
-!An\ error\ occurred\ while\ uploading\ the\ sketch=
+An\ error\ occurred\ while\ uploading\ the\ sketch=Egy hiba l\u00e9pett fel a v\u00e1zlat felt\u00f6lt\u00e9se k\u00f6zben
 
 #: ../../../processing/app/BaseNoGui.java:506
 #: ../../../processing/app/BaseNoGui.java:551
 #: ../../../processing/app/BaseNoGui.java:554
-!An\ error\ occurred\ while\ verifying\ the\ sketch=
+An\ error\ occurred\ while\ verifying\ the\ sketch=Egy hiba l\u00e9pett fel a v\u00e1zlat ellen\u0151rz\u00e9se k\u00f6zben
 
 #: ../../../processing/app/BaseNoGui.java:521
-!An\ error\ occurred\ while\ verifying/uploading\ the\ sketch=
+An\ error\ occurred\ while\ verifying/uploading\ the\ sketch=Egy hiba l\u00e9pett fel a v\u00e1zlat ellen\u0151rz\u00e9se/felt\u00f6lt\u00e9se k\u00f6zben
 
 #: Base.java:228
 An\ unknown\ error\ occurred\ while\ trying\ to\ load\nplatform-specific\ code\ for\ your\ machine.=Rendszerf\u00fcgg\u0151 k\u00f3d bet\u00f6lt\u00e9se sor\u00e1n\\n hiba l\u00e9pett fel. A hiba az \u00d6n g\u00e9p\u00e9ben van.
@@ -340,7 +340,7 @@ Close=Bez\u00e1r\u00e1s
 !Comment/Uncomment=
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:30
-!Communication=
+Communication=Kommunik\u00e1ci\u00f3
 
 #: ../../../../../app/src/cc/arduino/view/preferences/Preferences.java:266
 Compiler\ warnings\:\ =Ford\u00edt\u00f3program figyelmeztet\u00e9sek\:
@@ -415,7 +415,7 @@ Could\ not\ open\ the\ folder\n{0}=Nem siker\u00fclt megnyitni a mapp\u00e1t\:\n
 Could\ not\ re-save\ sketch=Nem siker\u00fclt \u00fajra-menteni v\u00e1zlatot
 
 #: Theme.java:52
-!Could\ not\ read\ color\ theme\ settings.\nYou'll\ need\ to\ reinstall\ Arduino.=
+Could\ not\ read\ color\ theme\ settings.\nYou'll\ need\ to\ reinstall\ Arduino.=Nem lehet olvasni a sz\u00edn t\u00e9ma be\u00e1ll\u00edt\u00e1sokat.\n\u00dajra kell telep\u00edtenie az Arduino-t.
 
 #: Preferences.java:219
 Could\ not\ read\ default\ settings.\nYou'll\ need\ to\ reinstall\ Arduino.=Az alap\u00e9rtelezett be\u00e1ll\u00edt\u00e1sok nem olvashat\u00f3ak\\nAz Arduino \u00fajratelep\u00edt\u00e9se sz\u00fcks\u00e9ges.
@@ -466,10 +466,10 @@ Czech\ (Czech\ Republic)=Cseh (Cseh K\u00f6zt\u00e1rsas\u00e1g)
 Danish\ (Denmark)=D\u00e1n (D\u00e1nia)
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:36
-!Data\ Processing=
+Data\ Processing=Adatfeldolgoz\u00e1s
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:35
-!Data\ Storage=
+Data\ Storage=Adatt\u00e1rol\u00e1s
 
 #: Editor.java:1224 Editor.java:2765
 Decrease\ Indent=Beh\u00faz\u00e1s Cs\u00f6kkent\u00e9se
@@ -667,10 +667,10 @@ Error\ while\ uploading\:\ missing\ '{0}'\ configuration\ parameter=Hiba felt\u0
 #: ../../../processing/app/BaseNoGui.java:506
 #: ../../../processing/app/BaseNoGui.java:551
 #: ../../../processing/app/BaseNoGui.java:554
-!Error\ while\ verifying=
+Error\ while\ verifying=Hiba ellen\u0151rz\u00e9s k\u00f6zben
 
 #: ../../../processing/app/BaseNoGui.java:521
-!Error\ while\ verifying/uploading=
+Error\ while\ verifying/uploading=Hiba ellen\u0151rz\u00e9s/felt\u00f6lt\u00e9s k\u00f6zben
 
 #: Preferences.java:93
 Estonian=\u00c9szt
@@ -888,7 +888,7 @@ Library\ Manager=K\u00f6nyvt\u00e1r kezel\u0151
 
 #: ../../../cc/arduino/contributions/libraries/LibraryInstaller.java:107
 #, java-format
-!Library\ is\ already\ installed\:\ {0}\ version\ {1}=
+Library\ is\ already\ installed\:\ {0}\ version\ {1}=A k\u00f6nyvt\u00e1r m\u00e1r telep\u00edtve van\: {0} verzi\u00f3 {1}
 
 #: ../../../../../app/src/cc/arduino/view/GoToLineNumber.java:70
 Line\ number\:=Sor sz\u00e1m\:
@@ -910,7 +910,7 @@ Loading\ configuration...=Konfigur\u00e1ci\u00f3 bet\u00f6lt\u00e9se...
 Manage\ Libraries...=K\u00f6nyvt\u00e1rak kezel\u00e9se...
 
 #: ../../../../../app/src/cc/arduino/view/preferences/Preferences.java:466
-!Manual\ proxy\ configuration=
+Manual\ proxy\ configuration=Manu\u00e1lis proxy konfigur\u00e1l\u00e1s
 
 #: Preferences.java:107
 Marathi=Marathi
@@ -966,7 +966,7 @@ New=\u00daj
 New\ Tab=\u00daj f\u00fcl
 
 #: SerialMonitor.java:112
-!Newline=
+Newline=\u00dajsor
 
 #: EditorHeader.java:340
 Next\ Tab=K\u00f6vetkez\u0151 f\u00fcl
@@ -1247,7 +1247,7 @@ Save\ Canceled.=Ment\u00e9s megszak\u00edtva.
 Save\ sketch\ folder\ as...=V\u00e1zlat mappa ment\u00e9s mint...
 
 #: ../../../../../app/src/processing/app/Preferences.java:425
-!Save\ when\ verifying\ or\ uploading=
+Save\ when\ verifying\ or\ uploading=Ment\u00e9s ellen\u0151rz\u00e9skor vagy felt\u00f6lt\u00e9skor
 
 #: Editor.java:2270 Editor.java:2308
 Saving...=Ment\u00e9s...
@@ -1278,10 +1278,10 @@ Select\ version=Verzi\u00f3 kiv\u00e1laszt\u00e1sa
 !Selected\ board\ depends\ on\ '{0}'\ core\ (not\ installed).=
 
 #: ../../../../../app/src/processing/app/Base.java:374
-!Selected\ board\ is\ not\ available=
+Selected\ board\ is\ not\ available=A kiv\u00e1lasztott alaplap nem el\u00e9rhet\u0151
 
 #: ../../../../../app/src/processing/app/Base.java:423
-!Selected\ library\ is\ not\ available=
+Selected\ library\ is\ not\ available=A kiv\u00e1lasztott k\u00f6nyvt\u00e1r nem el\u00e9rhet\u0151
 
 #: SerialMonitor.java:93
 Send=K\u00fcld\u00e9s
@@ -1290,10 +1290,10 @@ Send=K\u00fcld\u00e9s
 !Sensors=
 
 #: EditorToolbar.java:41 EditorToolbar.java:46 Editor.java:669
-!Serial\ Monitor=
+Serial\ Monitor=Soros Monitor
 
 #: ../../../../../app/src/processing/app/Editor.java:804
-!Serial\ Plotter=
+Serial\ Plotter=Soros Plotter
 
 #: Serial.java:194
 #, java-format
@@ -1496,30 +1496,30 @@ Type=T\u00edpus
 !Type\ board\ password\ to\ access\ its\ console=
 
 #: ../../../processing/app/Sketch.java:1673
-!Type\ board\ password\ to\ upload\ a\ new\ sketch=
+Type\ board\ password\ to\ upload\ a\ new\ sketch=G\u00e9pelje be az alaplap jelsz\u00f3t \u00faj v\u00e1zlat fel\u00f6lt\u00e9s\u00e9hez
 
 #: ../../../processing/app/Preferences.java:118
 Ukrainian=Ukr\u00e1n
 
 #: ../../../processing/app/Editor.java:2524
 #: ../../../processing/app/NetworkMonitor.java:145
-!Unable\ to\ connect\:\ is\ the\ sketch\ using\ the\ bridge?=
+Unable\ to\ connect\:\ is\ the\ sketch\ using\ the\ bridge?=Nem lehet csatlakozni\: a v\u00e1zlat haszn\u00e1lja a hidat?
 
 #: ../../../processing/app/NetworkMonitor.java:130
 !Unable\ to\ connect\:\ retrying=
 
 #: ../../../processing/app/Editor.java:2526
-!Unable\ to\ connect\:\ wrong\ password?=
+Unable\ to\ connect\:\ wrong\ password?=Nem lehet csatlakozni\: hib\u00e1s jelsz\u00f3?
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:65
 #, java-format
 !Unable\ to\ find\ {0}\ in\ {1}=
 
 #: ../../../processing/app/Editor.java:2512
-!Unable\ to\ open\ serial\ monitor=
+Unable\ to\ open\ serial\ monitor=Nem lehet megnyitni soros monitort
 
 #: ../../../../../app/src/processing/app/Editor.java:2709
-!Unable\ to\ open\ serial\ plotter=
+Unable\ to\ open\ serial\ plotter=Nem lehet megnyitni soros plottert
 
 #: ../../../../../app/src/cc/arduino/contributions/libraries/ui/LibraryManagerUI.java:94
 #: ../../../../../app/src/cc/arduino/contributions/packages/ui/ContributionManagerUI.java:89
@@ -1537,7 +1537,7 @@ Undo=Visszavon\u00e1s
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:86
 #, java-format
-!Unknown\ sketch\ file\ extension\:\ {0}=
+Unknown\ sketch\ file\ extension\:\ {0}=Ismeretlen v\u00e1zlat f\u00e1jl kiterjeszt\u00e9s\: {0}
 
 #: Platform.java:168
 !Unspecified\ platform,\ no\ launcher\ available.\nTo\ enable\ opening\ URLs\ or\ folders,\ add\ a\ \n"launcher\=/path/to/app"\ line\ to\ preferences.txt=
@@ -1553,7 +1553,7 @@ Update=Friss\u00edt\u00e9s
 Update\ sketch\ files\ to\ new\ extension\ on\ save\ (.pde\ ->\ .ino)=V\u00e1zlat f\u00e1jlok friss\u00edt\u00e9s \u00faj kiterjeszt\u00e9sre ment\u00e9sn\u00e9l (.pde -> .ino)
 
 #: ../../../cc/arduino/contributions/libraries/LibraryInstaller.java:167
-!Updating\ list\ of\ installed\ libraries=
+Updating\ list\ of\ installed\ libraries=Telep\u00edtett k\u00f6nyvt\u00e1rak list\u00e1j\u00e1nak friss\u00edt\u00e9se
 
 #: EditorToolbar.java:41 Editor.java:545
 Upload=Felt\u00f6lt\u00e9s
@@ -1593,16 +1593,16 @@ Username\:=Felhaszn\u00e1l\u00f3n\u00e9v\:
 
 #: ../../../processing/app/debug/Compiler.java:320
 #, java-format
-!Using\ previously\ compiled\ file\:\ {0}=
+Using\ previously\ compiled\ file\:\ {0}=El\u0151z\u0151leg ford\u00edtott f\u00e1jl haszn\u00e1lata\: {0}
 
 #: EditorToolbar.java:41 EditorToolbar.java:46
-Verify=Ellen\u0151rz\u00e9s
+Verify=Ellen\u0151riz
 
 #: Preferences.java:400
-Verify\ code\ after\ upload=K\u00f3d ellen\u0151rz\u00e9s felt\u00f6lt\u00e9s ut\u00e1n
+Verify\ code\ after\ upload=K\u00f3d ellen\u0151rz\u00e9se felt\u00f6lt\u00e9s ut\u00e1n
 
 #: ../../../../../app/src/processing/app/Editor.java:725
-!Verify/Compile=
+Verify/Compile=Ellen\u0151riz/Ford\u00edt
 
 #: ../../../../../app/src/processing/app/Base.java:451
 Verifying\ and\ uploading...=Ellen\u0151rz\u00e9s \u00e9s felt\u00f6lt\u00e9s...
@@ -1611,7 +1611,7 @@ Verifying\ and\ uploading...=Ellen\u0151rz\u00e9s \u00e9s felt\u00f6lt\u00e9s...
 !Verifying\ archive\ integrity...=
 
 #: ../../../../../app/src/processing/app/Base.java:454
-Verifying...=Ellen\u0151rz\u00e9s
+Verifying...=Ellen\u0151rz\u00e9s...
 
 #: ../../../../../app/src/cc/arduino/contributions/libraries/ui/ContributedLibraryTableCell.java:328
 #, java-format
@@ -1722,10 +1722,10 @@ You've\ reached\ the\ limit\ for\ auto\ naming\ of\ new\ sketches\nfor\ the\ day
 !Your\ copy\ of\ the\ IDE\ is\ installed\ in\ a\ subfolder\ of\ your\ sketchbook.\nPlease\ move\ the\ IDE\ to\ another\ folder.=
 
 #: Base.java:2638
-!ZIP\ files\ or\ folders=
+ZIP\ files\ or\ folders=ZIP f\u00e1jlok vagy mapp\u00e1k
 
 #: Base.java:2661
-!Zip\ doesn't\ contain\ a\ library=
+Zip\ doesn't\ contain\ a\ library=A Zip nem tartalmaz egy k\u00f6nyvt\u00e1rat
 
 #: Sketch.java:364
 #, java-format
@@ -1832,7 +1832,7 @@ version\ <b>{0}</b>=verzi\u00f3 <b>{0}</b>
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:78
 #, java-format
-!{0}\ pattern\ is\ missing=
+{0}\ pattern\ is\ missing={0} minta hi\u00e1nyzik
 
 #: debug/Compiler.java:365
 #, java-format
