--- a/arduino-core/src/processing/app/i18n/Resources_el_GR.properties
+++ b/arduino-core/src/processing/app/i18n/Resources_el_GR.properties
@@ -14,7 +14,7 @@
 # firewalker <firew4lker@gmail.com>, 2015
 # Spyridon Papanastasiou <spyridon.papanastasiou@gmail.com>, 2015
 # \u0393\u03b9\u03ac\u03bd\u03bd\u03b7\u03c2 \u03a3\u03c6\u03b1\u03ba\u03b9\u03b1\u03bd\u03ac\u03ba\u03b7\u03c2 <ysfakianakis@gmail.com>, 2013
-!=Project-Id-Version\: Arduino IDE 1.5\nReport-Msgid-Bugs-To\: \nPOT-Creation-Date\: 2012-03-29 10\:24-0400\nPO-Revision-Date\: 2015-11-18 16\:15+0000\nLast-Translator\: Federico Fissore <f.fissore@arduino.cc>\nLanguage-Team\: Greek (Greece) (http\://www.transifex.com/mbanzi/arduino-ide-15/language/el_GR/)\nMIME-Version\: 1.0\nContent-Type\: text/plain; charset\=UTF-8\nContent-Transfer-Encoding\: 8bit\nLanguage\: el_GR\nPlural-Forms\: nplurals\=2; plural\=(n \!\= 1);\n
+!=Project-Id-Version\: Arduino IDE 1.5\nReport-Msgid-Bugs-To\: \nPOT-Creation-Date\: 2012-03-29 10\:24-0400\nPO-Revision-Date\: 2015-11-30 16\:59+0000\nLast-Translator\: firewalker <firew4lker@gmail.com>\nLanguage-Team\: Greek (Greece) (http\://www.transifex.com/mbanzi/arduino-ide-15/language/el_GR/)\nMIME-Version\: 1.0\nContent-Type\: text/plain; charset\=UTF-8\nContent-Transfer-Encoding\: 8bit\nLanguage\: el_GR\nPlural-Forms\: nplurals\=2; plural\=(n \!\= 1);\n
 
 #: Preferences.java:358 Preferences.java:374
 \ \ (requires\ restart\ of\ Arduino)=(\u0391\u03c0\u03b1\u03b9\u03c4\u03b5\u03af\u03c4\u03b1\u03b9 \u03b5\u03c0\u03b1\u03b5\u03ba\u03ba\u03af\u03bd\u03b7\u03c3\u03b7 \u03c4\u03bf\u03c5 Arduino)
@@ -153,7 +153,7 @@ Archive\ sketch\ canceled.=\u0391\u03ba\u03c5\u03c1\u03ce\u03b8\u03b7\u03ba\u03b
 Archiving\ the\ sketch\ has\ been\ canceled\ because\nthe\ sketch\ couldn't\ save\ properly.=\u0397 \u03b1\u03c1\u03c7\u03b5\u03b9\u03bf\u03b8\u03ad\u03c4\u03b7\u03c3\u03b7 \u03c4\u03bf\u03c5 \u03c3\u03c7\u03b5\u03b4\u03af\u03bf\u03c5 \u03b1\u03ba\u03c5\u03c1\u03ce\u03b8\u03b7\u03ba\u03b5 \u03b5\u03c0\u03b5\u03b9\u03b4\u03ae\n\u03c4\u03bf \u03c3\u03c7\u03ad\u03b4\u03b9\u03bf \u03b4\u03b5\u03bd \u03bc\u03c0\u03bf\u03c1\u03bf\u03cd\u03c3\u03b5 \u03bd\u03b1 \u03b1\u03c0\u03bf\u03b8\u03b7\u03ba\u03b5\u03c5\u03c4\u03b5\u03af \u03c3\u03c9\u03c3\u03c4\u03ac.
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:24
-!Arduino=
+Arduino=Arduino
 
 #: ../../../processing/app/I18n.java:83
 Arduino\ ARM\ (32-bits)\ Boards=\u03a0\u03bb\u03b1\u03ba\u03ad\u03c4\u03b5\u03c2 Arduino ARM (32-bits)
@@ -341,7 +341,7 @@ Close=\u039a\u03bb\u03b5\u03af\u03c3\u03b9\u03bc\u03bf
 Comment/Uncomment=\u03a3\u03c7\u03bf\u03bb\u03b9\u03b1\u03c3\u03bc\u03cc\u03c2/\u0391\u03c0\u03bf\u03c3\u03c7\u03bf\u03bb\u03b9\u03b1\u03c3\u03bc\u03cc\u03c2
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:30
-!Communication=
+Communication=\u0395\u03c0\u03b9\u03ba\u03bf\u03b9\u03bd\u03c9\u03bd\u03af\u03b1
 
 #: ../../../../../app/src/cc/arduino/view/preferences/Preferences.java:266
 Compiler\ warnings\:\ =\u03a0\u03c1\u03bf\u03b5\u03b9\u03b4\u03bf\u03c0\u03bf\u03b9\u03ae\u03c3\u03b5\u03b9\u03c2 \u039c\u03b5\u03c4\u03b1\u03b3\u03bb\u03c9\u03c4\u03c4\u03b9\u03c3\u03c4\u03ae\:
@@ -350,7 +350,7 @@ Compiler\ warnings\:\ =\u03a0\u03c1\u03bf\u03b5\u03b9\u03b4\u03bf\u03c0\u03bf\u0
 Compiling\ sketch...=\u039c\u03b5\u03c4\u03b1\u03b3\u03bb\u03ce\u03c4\u03c4\u03b9\u03c3\u03b7 \u03c3\u03c7\u03b5\u03b4\u03af\u03bf\u03c5...
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:27
-!Contributed=
+Contributed=\u03a3\u03c5\u03bd\u03b7\u03c3\u03c6\u03bf\u03c1\u03ac
 
 #: Editor.java:1157 Editor.java:2707
 Copy=\u0391\u03bd\u03c4\u03b9\u03b3\u03c1\u03b1\u03c6\u03ae
@@ -467,10 +467,10 @@ Czech\ (Czech\ Republic)=\u03a4\u03c3\u03ad\u03c7\u03b9\u03ba\u03b1 (\u0394\u03b
 Danish\ (Denmark)=\u0394\u03b1\u03bd\u03b9\u03ba\u03ac (\u0394\u03b1\u03bd\u03af\u03b1)
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:36
-!Data\ Processing=
+Data\ Processing=\u0395\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03af\u03b1 \u0394\u03b5\u03b4\u03bf\u03bc\u03ad\u03bd\u03c9\u03bd
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:35
-!Data\ Storage=
+Data\ Storage=\u0391\u03c0\u03bf\u03b8\u03ae\u03ba\u03b5\u03c5\u03c3\u03b7 \u0394\u03b5\u03b4\u03bf\u03bc\u03ad\u03bd\u03c9\u03bd
 
 #: Editor.java:1224 Editor.java:2765
 Decrease\ Indent=\u039c\u03b5\u03af\u03c9\u03c3\u03b7 \u0395\u03c3\u03bf\u03c7\u03ae\u03c2
@@ -482,7 +482,7 @@ Default=\u03a0\u03c1\u03bf\u03b5\u03c0\u03b9\u03bb\u03bf\u03b3\u03ae
 Delete=\u0394\u03b9\u03b1\u03b3\u03c1\u03b1\u03c6\u03ae
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:33
-!Device\ Control=
+Device\ Control=\u0388\u03bb\u03b5\u03b3\u03c7\u03bf\u03c2 \u03a3\u03c5\u03c3\u03ba\u03b5\u03c5\u03ae\u03c2
 
 #: debug/Uploader.java:199
 Device\ is\ not\ responding,\ check\ the\ right\ serial\ port\ is\ selected\ or\ RESET\ the\ board\ right\ before\ exporting=\u0397 \u03c3\u03c5\u03c3\u03ba\u03b5\u03c5\u03ae \u03b4\u03b5\u03bd \u03b1\u03c0\u03bf\u03ba\u03c1\u03af\u03bd\u03b5\u03c4\u03b1\u03b9, \u03b5\u03bb\u03ad\u03b3\u03be\u03c4\u03b5 \u03c0\u03c9\u03c2 \u03b5\u03af\u03bd\u03b1\u03b9 \u03b5\u03c0\u03b9\u03bb\u03b5\u03b3\u03bc\u03ad\u03bd\u03b7 \u03b7 \u03c3\u03c9\u03c3\u03c4\u03ae \u03b8\u03cd\u03c1\u03b1 \u03ae \u03b3\u03af\u03bd\u03b5\u03c4\u03b5 \u03c3\u03c9\u03c3\u03c4\u03cc RESET \u03c4\u03b7\u03c2 \u03c0\u03bb\u03b1\u03ba\u03ad\u03c4\u03b1\u03c2 \u03c0\u03c1\u03b9\u03bd \u03c4\u03b7\u03bd \u03b5\u03be\u03b1\u03b3\u03c9\u03b3\u03ae.
@@ -491,7 +491,7 @@ Device\ is\ not\ responding,\ check\ the\ right\ serial\ port\ is\ selected\ or\
 Discard\ all\ changes\ and\ reload\ sketch?=\u0391\u03c0\u03cc\u03c1\u03c1\u03b9\u03c8\u03b7 \u03cc\u03bb\u03c9\u03bd \u03c4\u03c9\u03bd \u03b1\u03bb\u03bb\u03b1\u03b3\u03ce\u03bd \u03ba\u03b1\u03b9 \u03b5\u03c0\u03b1\u03bd\u03b1\u03c6\u03cc\u03c1\u03c4\u03c9\u03c3\u03b7 \u03c4\u03bf\u03c5 \u03c3\u03c7\u03b5\u03b4\u03af\u03bf\u03c5;
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:29
-!Display=
+Display=\u0391\u03c0\u03b5\u03b9\u03ba\u03cc\u03bd\u03b9\u03c3\u03b7
 
 #: ../../../processing/app/Preferences.java:438
 Display\ line\ numbers=\u03a0\u03c1\u03bf\u03b2\u03bf\u03bb\u03ae \u03b1\u03c1\u03b9\u03b8\u03bc\u03ce\u03bd \u03b3\u03c1\u03b1\u03bc\u03bc\u03ae\u03c2
@@ -885,7 +885,7 @@ Library\ Manager=\u0394\u03b9\u03b1\u03c7\u03b5\u03b9\u03c1\u03b9\u03c3\u03c4\u0
 Library\ added\ to\ your\ libraries.\ Check\ "Include\ library"\ menu=\u0397 \u0392\u03b9\u03b2\u03bb\u03b9\u03bf\u03b8\u03ae\u03ba\u03b7 \u03c0\u03c1\u03bf\u03c3\u03c4\u03ad\u03b8\u03b7\u03ba\u03b5 \u03c3\u03c4\u03b9\u03c2 \u03b2\u03b9\u03b2\u03bb\u03b9\u03bf\u03b8\u03ae\u03ba\u03b5\u03c2 \u03c3\u03b1\u03c2. \u0395\u03bb\u03ad\u03b3\u03be\u03c4\u03b5 \u03c4\u03bf \u03bc\u03b5\u03bd\u03bf\u03cd "\u03a3\u03c5\u03bc\u03c0\u03b5\u03c1\u03af\u03bb\u03b7\u03c8\u03b7 \u0392\u03b9\u03b2\u03bb\u03b9\u03bf\u03b8\u03ae\u03ba\u03b7\u03c2"
 
 #: ../../../../../arduino-core/src/cc/arduino/Compiler.java:73
-!Library\ can't\ use\ both\ 'src'\ and\ 'utility'\ folders.\ Double\ check\ {0}=
+Library\ can't\ use\ both\ 'src'\ and\ 'utility'\ folders.\ Double\ check\ {0}=\u0397 \u03b2\u03b9\u03b2\u03bb\u03b9\u03bf\u03b8\u03ae\u03ba\u03b7 \u03b4\u03b5\u03bd \u03bc\u03c0\u03bf\u03c1\u03b5\u03af \u03bd\u03b1 \u03c7\u03c1\u03b7\u03c3\u03b9\u03bc\u03bf\u03c0\u03bf\u03b9\u03b5\u03af \u03ba\u03b1\u03b9 \u03c4\u03bf\u03bd \u03c6\u03ac\u03ba\u03b5\u03bb\u03bf 'src' \u03ba\u03b1\u03b9 \u03c4\u03bf\u03bd 'utility'. \u0395\u03bb\u03ad\u03b3\u03be\u03c4\u03b5 \u03c4\u03bf {0}
 
 #: ../../../cc/arduino/contributions/libraries/LibraryInstaller.java:107
 #, java-format
@@ -1058,13 +1058,13 @@ Open\ an\ Arduino\ sketch...=\u0386\u03bd\u03bf\u03b9\u03be\u03b5 \u03ad\u03bd\u
 Open...=\u0386\u03bd\u03bf\u03b9\u03b3\u03bc\u03b1...
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:37
-!Other=
+Other=\u0386\u03bb\u03bb\u03b1
 
 #: Editor.java:563
 Page\ Setup=\u0395\u03b3\u03ba\u03b1\u03c4\u03ac\u03c3\u03c4\u03b1\u03c3\u03b7 \u03a3\u03b5\u03bb\u03af\u03b4\u03b1\u03c2
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:25
-!Partner=
+Partner=\u0395\u03c4\u03b1\u03af\u03c1\u03bf\u03c2
 
 #: ../../../processing/app/forms/PasswordAuthorizationDialog.java:44
 Password\:=\u03a3\u03c5\u03bd\u03b8\u03b7\u03bc\u03b1\u03c4\u03b9\u03ba\u03cc\:
@@ -1178,7 +1178,7 @@ Quit=\u0388\u03be\u03bf\u03b4\u03bf\u03c2
 RETIRED=\u03a0\u0391\u03a1\u039f\u03a0\u039b\u0399\u03a3\u039c\u0395\u039d\u039f
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:26
-!Recommended=
+Recommended=\u03a3\u03c5\u03bd\u03af\u03c3\u03c4\u03b1\u03c4\u03b1\u03b9
 
 #: Editor.java:1138 Editor.java:1140 Editor.java:1390
 Redo=\u0395\u03c0\u03b1\u03bd\u03ac\u03bb\u03b7\u03c8\u03b7
@@ -1288,7 +1288,7 @@ Selected\ library\ is\ not\ available=\u0397 \u03b5\u03c0\u03b9\u03bb\u03b5\u03b
 Send=\u0391\u03c0\u03bf\u03c3\u03c4\u03bf\u03bb\u03ae
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:32
-!Sensors=
+Sensors=\u0391\u03b9\u03c3\u03b8\u03b7\u03c4\u03ae\u03c1\u03b5\u03c2
 
 #: EditorToolbar.java:41 EditorToolbar.java:46 Editor.java:669
 Serial\ Monitor=\u03a3\u03b5\u03b9\u03c1\u03b9\u03b1\u03ba\u03ae \u039f\u03b8\u03cc\u03bd\u03b7
@@ -1327,7 +1327,7 @@ Show\ verbose\ output\ during\ compilation=\u0395\u03bc\u03c6\u03ac\u03bd\u03b9\
 Show\ verbose\ output\ during\:\ =\u0395\u03bc\u03c6\u03ac\u03bd\u03b9\u03c3\u03b7 \u03b4\u03b9\u03b5\u03be\u03bf\u03b4\u03b9\u03ba\u03ae\u03c2 \u03b5\u03be\u03cc\u03b4\u03bf\u03c5 \u03ba\u03b1\u03c4\u03ac \u03c4\u03b7\u03bd\:
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:31
-!Signal\ Input/Output=
+Signal\ Input/Output=\u0395\u03af\u03c3\u03bf\u03b4\u03bf\u03c2/\u0388\u03be\u03bf\u03b4\u03bf\u03c2 \u03a3\u03ae\u03bc\u03b1\u03c4\u03bf\u03c2
 
 #: Editor.java:607
 Sketch=\u03a3\u03c7\u03ad\u03b4\u03b9\u03bf
@@ -1471,7 +1471,7 @@ This\ report\ would\ have\ more\ information\ with=\u0391\u03c5\u03c4\u03ae \u03
 Time\ for\ a\ Break=\u038f\u03c1\u03b1 \u03b3\u03b9\u03b1 \u03b4\u03b5\u03b9\u03ac\u03bb\u03b5\u03b9\u03bc\u03b1
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:34
-!Timing=
+Timing=\u03a7\u03c1\u03bf\u03bd\u03b9\u03c3\u03bc\u03cc\u03c2
 
 #: ../../../cc/arduino/contributions/packages/ContributionInstaller.java:94
 #, java-format
@@ -1527,7 +1527,7 @@ Unable\ to\ open\ serial\ plotter=\u0391\u03b4\u03c5\u03bd\u03b1\u03bc\u03af\u03
 Unable\ to\ reach\ Arduino.cc\ due\ to\ possible\ network\ issues.=\u0391\u03b4\u03c5\u03bd\u03b1\u03bc\u03af\u03b1 \u03b5\u03cd\u03c1\u03b5\u03c3\u03b7\u03c2 \u03c4\u03bf\u03c5 Arduino.cc \u03bb\u03cc\u03b3\u03bf \u03c0\u03b9\u03b8\u03b1\u03bd\u03bf\u03cd \u03c0\u03c1\u03bf\u03b2\u03bb\u03ae\u03bc\u03b1\u03c4\u03bf\u03c2 \u03c3\u03c4\u03bf \u03b4\u03af\u03ba\u03c4\u03c5\u03bf.
 
 #: ../../../../../arduino-core/src/processing/app/I18n.java:38
-!Uncategorized=
+Uncategorized=\u0391\u03c4\u03b1\u03be\u03b9\u03bd\u03cc\u03bc\u03b7\u03c4\u03bf
 
 #: Editor.java:1133 Editor.java:1355
 Undo=\u0391\u03bd\u03b1\u03af\u03c1\u03b5\u03c3\u03b7
